[FEATURE] Minor features:
- Debug mode implemented.
- Xtreme difficult implemented.
- Dynamic start position implemented.
- Score implemented.
- Styles correccions.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <div id="panel"></div>
-    <div id="result"></div>
+    <div id="result">
+        <p>Score: <span id="score-value">0</span></p>
+    </div>
 </body>
 </html>
