--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <script src="game.js"></script>
 </head>
 <body>
-    <div id="panel"></div>
-    <div id="result">
-        <p>Score: <span id="score-value">0</span></p>
+    <div id="game-container">
+        <div id="panel"></div>
+        <div id="result">
+            <p>Score: <span id="score-value">0</span></p>
+            <p id="execution-status">Stopped</p>
+        </div>
     </div>
 </body>
 </html>
