--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <div id="game-container">
         <div id="panel"></div>
         <div id="result">
-            <p>Score: <span id="score-value">0</span></p>
+            <p>Score: <span id="execution-score">0</span></p>
+            <p id="execution-message"></p>
             <p id="execution-status">Stopped</p>
         </div>
     </div>
