--- a/index.html
+++ b/index.html
@@ -9,11 +9,21 @@
 </head>
 <body>
     <div id="game-container">
-        <div id="panel"></div>
-        <div id="result">
-            <p>Score: <span id="execution-score">0</span></p>
-            <p id="execution-message"></p>
-            <p id="execution-status">Stopped</p>
+        <div id="game-container-body">
+            <div id="panel"></div>
+            <div id="result">
+                <p>Score: <span id="execution-score">0</span></p>
+                <p id="execution-message"></p>
+                <p id="execution-status">Stopped</p>
+            </div>
+        </div>
+        <div id="game-container-r-sidebar">
+            <div id="r-sidebar-title">
+                <h3>Trace</h3>
+            </div>
+            <div id="r-sidebar-body">
+                
+            </div>
         </div>
     </div>
 </body>
