[FEATURE] Minor improvements.

--- a/index.html
+++ b/index.html
@@ -8,22 +8,28 @@
     <script src="game.js"></script>
 </head>
 <body>
-    <div id="game-container">
-        <div id="game-container-body">
-            <div id="panel"></div>
-            <div id="result">
-                <p>Score: <span id="execution-score">0</span></p>
-                <p id="execution-message"></p>
-                <p id="execution-status">Stopped</p>
+    <div id="main-panel">
+        <h1 id="title">js-tetris</h1>
+        <div id="game-container">
+            <div id="game-container-body">
+                <div id="panel"></div>
+                <div id="result">
+                    <p>Score: <span id="execution-score">0</span></p>
+                    <p id="execution-message"></p>
+                    <p id="execution-status">Stopped</p>
+                </div>
+            </div>
+            <div id="game-container-r-sidebar">
+                <div id="r-sidebar-title">
+                    <h3>Trace</h3>
+                </div>
+                <div id="r-sidebar-body">
+                    
+                </div>
             </div>
         </div>
-        <div id="game-container-r-sidebar">
-            <div id="r-sidebar-title">
-                <h3>Trace</h3>
-            </div>
-            <div id="r-sidebar-body">
-                
-            </div>
+        <div>
+            <button id="replay-button" onclick="start_game()">Replay</button>
         </div>
     </div>
 </body>
