[FEATURE] Add features:
- Add SoundGenerator to manage game sounds.
- Add mirror effect to block.
- Add Keys map to UI.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
                 </div>
             </div>
             <div id="game-container-r-sidebar">
+                <div id="keys">
+                    <h3>Keys</h3>
+                </div>
+                <div id="r-sidebar-keys">
+                    <span class="trace">Move: ⬅️, ⬇️, ➡️</span>
+                    <span class="trace">Rotate: ⬆️ or <b>R</b></span>
+                    <span class="trace">Mirror: <b>Space</b> or <b>M</b></span>
+                    <span class="trace">Mute: <b>S</b></span>
+                </div>
                 <div id="r-sidebar-title">
                     <h3>Trace</h3>
                 </div>
@@ -28,8 +37,10 @@
                 </div>
             </div>
         </div>
-        <div>
+        <div id="button-footer">
+            <button class="hidden-button">🔊</button>
             <button id="replay-button" onclick="start_game()">Replay</button>
+            <button id="mute-button" onclick="switch_mute()">🔈</button>
         </div>
     </div>
 </body>
