[FEATURE] Add time and remove row multiplier.

--- a/index.html
+++ b/index.html
@@ -31,11 +31,16 @@
                     <span class="trace">Mute: <b>S</b></span>
                     <span class="trace">Debug: <b>D</b></span>
                 </div>
+                <div id="r-sidebar-time-title">
+                    <h3>Time</h3>
+                </div>
+                <div id="r-sidebar-time">
+                    <p id="game-time">00:00:00</p>
+                </div>
                 <div id="r-sidebar-title">
                     <h3>Trace</h3>
                 </div>
                 <div id="r-sidebar-body">
-                    
                 </div>
             </div>
         </div>
